src/objects/dwp_kitv__Visit_Management_Team__c.object
<CustomObject>
    <description>Object to relate users with visits</description>
    <fields>
        <fullName>dwp_kitv__contact_email_desc__c</fullName>
        <description>User email</description>
        <formula>dwp_kitv__user_id__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__contact_phone_desc__c</fullName>
        <description>User phone</description>
        <formula>IF(ISBLANK( dwp_kitv__user_id__r.Phone ), dwp_kitv__user_id__r.MobilePhone, dwp_kitv__user_id__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User visit</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_Management_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dwp_kitv__visit_id__c</fullName>
        <description>Parent Object</description>
        <label>Visit</label>
        <referenceTo>dwp_kitv__Visit__c</referenceTo>
        <relationshipLabel>Visit Management Teams</relationshipLabel>
        <relationshipName>Visit_Management_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>user_prof_position_type__c</fullName>
        <formula>dwp_kitv__user_id__r.prof_position_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User position</label>
        <type>Text</type>
    </fields>
    <label>Visit Management Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VM-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Management Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dwp_kitv__Change_user</fullName>
        <active>true</active>
        <description>You cannot change the user.</description>
        <errorConditionFormula>ISCHANGED(  dwp_kitv__user_id__c )</errorConditionFormula>
        <errorMessage>Is not allowed change the user. Please, delete the visit management team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>dwp_kitv__User_owner</fullName>
        <active>true</active>
        <description>The user cannot be the same that visit owner.</description>
        <errorConditionFormula>dwp_kitv__user_id__c  =  dwp_kitv__visit_id__r.OwnerId</errorConditionFormula>
        <errorDisplayField>dwp_kitv__user_id__c</errorDisplayField>
        <errorMessage>You cannot insert the Owner of the visit.</errorMessage>
    </validationRules>
</CustomObject>